[modify] add single page

--- a/casa-celica.html
+++ b/casa-celica.html
@@ -152,7 +152,7 @@
                         <p><strong data-i18n="hotel.rating">Rating:</strong> <span class="text-warning">★★★ 4.2</span></p>
                         <p><strong data-i18n="hotel.location">Location:</strong> <span data-i18n="hotel.casaCecilia.location">El Nido, Palawan</span></p>
                         <p><strong data-i18n="hotel.phone">Phone:</strong> <span data-i18n="hotel.casaCecilia.phone">+63 917 345 6789</span></p>
-                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://www.facebook.com/CasaCeciliaHotel" target="_blank" data-i18n="hotel.casaCecilia.website">Facebook Page</a></p>
+                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://www.facebook.com/CasaCeciliaHotel" target="_blank">Facebook Page</a></p>
                     </div>
                 </div>
                 <div class="col-lg-6">
