--- a/hhotel-vegan.html
+++ b/hhotel-vegan.html
@@ -153,7 +153,7 @@
                         <p><strong data-i18n="hotel.rating">Rating:</strong> <span class="text-warning">★★★★★ 4.6</span></p>
                         <p><strong data-i18n="hotel.location">Location:</strong> <span data-i18n="hotel.hHotelVeganHotel.location">El Nido Town Proper, Palawan</span></p>
                         <p><strong data-i18n="hotel.phone">Phone:</strong> <span data-i18n="hotel.hHotelVeganHotel.phone">+63 917 456 7890</span></p>
-                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://hhotelelnido.com/" target="_blank" data-i18n="hotel.hHotelVeganHotel.website">hhotelelnido.com</a></p>
+                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://hhotelelnido.com/" target="_blank">hhotelelnido.com</a></p>
                     </div>
                 </div>
                 <div class="col-lg-6">
