--- a/hotel.html
+++ b/hotel.html
@@ -841,7 +841,7 @@
                                     <p class="card-text"><strong data-i18n="hotel.phone">Phone:</strong> <span data-i18n="hotel.jBoutiqueHotel.phone">+63 917 567 8901</span></p>
                                     <p class="card-text"><strong data-i18n="hotel.website">Website:</strong> <a
                                             href="https://jboutiquehotelelnido.com/"
-                                            target="_blank" data-i18n="hotel.jBoutiqueHotel.website">jboutiquehotelelnido.com</a></p>
+                                            target="_blank">jboutiquehotelelnido.com</a></p>
                                 </div>
                             </div>
                         </div>
