--- a/investing.html
+++ b/investing.html
@@ -380,7 +380,7 @@
                                     </p>
 
                                     <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                        <a href="#">
+                                        <a href="sunmai.html">
                                             <img class="img-fluid mb-3 mb-lg-0" src="assets/img/snb/snb_1.jpg"
                                                 alt="Sunmai Nacpan Beach"
                                                 style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
@@ -410,7 +410,7 @@
                                     </div>
 
                                     <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                        <a href="#">
+                                        <a href="piece-of-sky.html">
                                             <img class="img-fluid mb-3 mb-lg-0" src="assets/img/piece_sky/logo.jpg"
                                                 alt="Piece of Sky"
                                                 style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
@@ -437,7 +437,7 @@
                                     </div>
 
                                     <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                        <a href="#">
+                                        <a href="h-and-c-resturant.html">
                                             <img class="img-fluid mb-3 mb-lg-0" src="assets/img/h_c/logo.jpg"
                                                 alt="H&C Chinese Restaurant"
                                                 style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
@@ -465,7 +465,7 @@
                                     </div>
 
                                     <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                        <a href="#">
+                                        <a href="unocha.html">
                                             <img class="img-fluid mb-3 mb-lg-0" src="images/unocha/1.webp"
                                                 style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;"
                                                 alt="Unocha" />
@@ -489,7 +489,7 @@
                                     </div>
 
                                     <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                        <a href="#">
+                                        <a href="3-bros-falafel.html">
                                             <img class="img-fluid mb-3 mb-lg-0" src="assets/img/time-3-Bros-Falafel.jpg"
                                                 alt="3 Bros Falafel"
                                                 style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
@@ -516,7 +516,7 @@
                                     </div>
 
                                     <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                        <a href="#">
+                                        <a href="grounded-coffee.html">
                                             <img class="img-fluid mb-3 mb-lg-0" src="assets/img/g100a/g100a_3.jpg"
                                                 alt="Grounded Coffee"
                                                 style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
@@ -545,7 +545,7 @@
                                     </div>
 
                                     <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                        <a href="#">
+                                        <a href="jane-coffee.html">
                                             <img class="img-fluid mb-3 mb-lg-0" src="assets/img/placeholder.webp"
                                                 alt="Jane Coffee"
                                                 style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
@@ -573,7 +573,7 @@
                                     </div>
 
                                     <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                        <a href="#">
+                                        <a href="lechon-co.html">
                                             <img class="img-fluid mb-3 mb-lg-0" src="assets/img/placeholder.webp"
                                                 alt="Lechon Co by H Hospitality Group"
                                                 style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
@@ -600,7 +600,7 @@
                                     </div>
 
                                     <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                        <a href="#">
+                                        <a href="ver-de-el-nido.html">
                                             <img class="img-fluid mb-3 mb-lg-0"
                                                 src="assets/img/Ver-De-El-Nido/Ver-De-El-Nido_1.jpg"
                                                 alt="Ver De El Nido"
@@ -652,8 +652,10 @@
                         </div>
                         <div class="row mb-5">
                             <div class="col-lg-6">
-                                <img class="img-fluid mb-3" src="assets/img/Oriental-Spa/Oriental-Spa_1.jpg"
-                                    alt="Oriental Spa 1" />
+                                <a href="oriental-spa-1.html">
+                                    <img class="img-fluid mb-3" src="assets/img/Oriental-Spa/Oriental-Spa_1.jpg"
+                                        alt="Oriental Spa 1" />
+                                </a>
                                 <h4 data-i18n="investing.spa.orientalSpa1.name">Oriental Spa 1</h4>
                                 <p class="text-black-50 investing-description mb-3" data-i18n="investing.spa.orientalSpa1.description">
                                     Located on the first floor of H Hotel, Oriental Spa 1 is the most popular massage
@@ -670,8 +672,10 @@
                                 </ul>
                             </div>
                             <div class="col-lg-6">
-                                <img class="img-fluid mb-3" src="assets/img/Oriental-Spa/Oriental-Spa_2.jpg"
-                                    alt="Oriental Spa 2" />
+                                <a href="oriental-spa-2.html">
+                                    <img class="img-fluid mb-3" src="assets/img/Oriental-Spa/Oriental-Spa_2.jpg"
+                                        alt="Oriental Spa 2" />
+                                </a>
                                 <h4 data-i18n="investing.spa.orientalSpa2.name">Oriental Spa 2</h4>
                                 <p class="text-black-50 investing-description mb-3" data-i18n="investing.spa.orientalSpa2.description">
                                     Oriental Spa 2 is El Nido's newest luxury wellness spa, featuring 40 massage
@@ -710,7 +714,7 @@
                             </div>
 
                             <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                <a href="#">
+                                <a href="discover-el-nido.html">
                                     <img class="img-fluid mb-3 mb-lg-0" src="assets/img/time-Discover-El-Nido-Tours.jpg"
                                         alt="El Nido GO"
                                         style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
@@ -729,7 +733,7 @@
 
 
                             <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                <a href="#">
+                                <a href="el-nido-go.html">
                                     <img class="img-fluid mb-3 mb-lg-0" src="assets/img/discover/discover_1.jpg"
                                         alt="Lechon Co by H Hospitality Group"
                                         style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
@@ -747,7 +751,7 @@
 
 
                             <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                <a href="#">
+                                <a href="nacpan-beach-shuttle.html">
                                     <img class="img-fluid mb-3 mb-lg-0"
                                         src="assets/img/Nacpan-Beach-Shuttle/Nacpan-Beach-Shuttle_1.jpg"
                                         alt="Nacpan Beach Shuttle"
@@ -764,7 +768,7 @@
                             </div>
 
                             <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                <a href="#">
+                                <a href="nacpan-beach-wedding.html">
                                     <img class="img-fluid mb-3 mb-lg-0" src="images/nacpan_beach_wedding/1.webp"
                                         alt="Nacpan Beach Wedding"
                                         style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
@@ -781,7 +785,7 @@
                             </div>
 
                             <div class="col-xl-4 col-md-6 col-12 p-2 mb-5">
-                                <a href="#">
+                                <a href="nacpan-sunset-market.html">
                                     <img class="img-fluid mb-3 mb-lg-0" src="images/sunset_market/1.webp"
                                         alt="Nacpan Sunset Market"
                                         style="max-height: 230px; height: 230px; object-fit: cover; width: 100%;" />
