--- a/jboutique-hotel.html
+++ b/jboutique-hotel.html
@@ -153,7 +153,7 @@
                         <p><strong data-i18n="hotel.rating">Rating:</strong> <span class="text-warning">★★★★★ 4.5</span></p>
                         <p><strong data-i18n="hotel.location">Location:</strong> <span data-i18n="hotel.jBoutiqueHotel.location">El Nido Town Center, Palawan</span></p>
                         <p><strong data-i18n="hotel.phone">Phone:</strong> <span data-i18n="hotel.jBoutiqueHotel.phone">+63 917 567 8901</span></p>
-                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://jboutiquehotelelnido.com/" target="_blank" data-i18n="hotel.jBoutiqueHotel.website">jboutiquehotelelnido.com</a></p>
+                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://jboutiquehotelelnido.com/" target="_blank">jboutiquehotelelnido.com</a></p>
                     </div>
                 </div>
                 <div class="col-lg-6">
