--- a/nacpan-beach-villas.html
+++ b/nacpan-beach-villas.html
@@ -155,7 +155,7 @@
                         <p><strong data-i18n="hotel.location">Location:</strong> <span data-i18n="hotel.nacpanBeachVillas.location">Near Nacpan Beach, El Nido, Palawan</span></p>
                         <p><strong data-i18n="hotel.highlights">Highlights:</strong> <span data-i18n="hotel.nacpanBeachVillas.highlights">Free WiFi, Garden, Terrace, Bar</span></p>
                         <p><strong data-i18n="hotel.coupleRating">Couple rating:</strong> 9.4</p>
-                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://www.nacpanbeachvillas.com/" target="_blank" data-i18n="hotel.nacpanBeachVillas.website">nacpanbeachvillas.com</a></p>
+                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://www.nacpanbeachvillas.com/" target="_blank">nacpanbeachvillas.com</a></p>
                     </div>
                 </div>
                 <div class="col-lg-6">
