--- a/sunmai.html
+++ b/sunmai.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta property="og:title" content="Piece Lio - H Hospitality Group" />
+    <meta property="og:title" content="Sunmai - H Hospitality Group" />
     <meta property="og:description"
-        content="Experience luxury and tranquility at Piece Lio, a world-class beachfront resort in El Nido, Palawan." />
-    <meta property="og:url" content="https://hhospitality.group/piece-lio.html" />
+        content="Experience authentic Taiwanese craft beer and delicious food at Sunmai, located at beautiful Nacpan Beach, El Nido, Palawan." />
+    <meta property="og:url" content="https://hhospitality.group/sunmai.html" />
     <meta property="og:site_name" content="H Hospitality Group" />
-    <meta property="og:image" content="https://hhospitality.group/assets/img/piece-lio-og-image.jpg" />
+    <meta property="og:image" content="https://hhospitality.group/assets/img/snb/snb_1.jpg" />
     <meta name="format-detection" content="telephone=no">
-    <title>Piece Lio - H Hospitality Group</title>
+    <title>Sunmai - H Hospitality Group</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon_io/favicon.ico" />
     <link rel="apple-touch-icon" href="assets/favicon_io/android-chrome-192x192.png" sizes="192x192">
     <link rel="icon" href="assets/favicon_io/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -30,15 +30,6 @@
 
         #mainNav .langSelectDesktop {
             margin-top: 25px;
-        }
-
-        .piece-lio-banner {
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("images/piecelio/cover.webp");
-            background-position: center;
-            background-repeat: no-repeat;
-            background-attachment: scroll;
-            background-size: cover;
-            padding: 10rem 0;
         }
 
         .carousel-item img {
@@ -127,13 +118,14 @@
     </nav>
 
     <!-- Banner Section -->
+    <!-- Banner Section -->
     <section class="banner-section">
         <div class="container-fluid p-0">
-            <div class="banner-image" style="background-image: url('assets/img/sresort/sresort_1.jpg'); height: 60vh; background-size: cover; background-position: center;">
+            <div class="banner-image" style="background-image: url('assets/img/snb/snb_1.jpg'); height: 60vh; background-size: cover; background-position: center;">
                 <div class="banner-overlay d-flex align-items-center justify-content-center" style="background-color: rgba(0, 0, 0, 0.4); height: 100%;">
                     <div class="text-center text-white">
-                        <h1 class="display-3 fw-bold" data-i18n="hotel.sResortElNido.name">S Resort El Nido</h1>
-                        <p class="lead" data-i18n="hotel.sResortElNido.location">Corong Corong, El Nido, Palawan</p>
+                        <h1 class="display-3 fw-bold" data-i18n="investing.restaurantsCafeBars.sunmaiNacpanBeach.name">Sunmai</h1>
+                        <p class="lead" data-i18n="investing.restaurantsCafeBars.sunmaiNacpanBeach.location">Nacpan Beach</p>
                     </div>
                 </div>
             </div>
@@ -146,65 +138,64 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <h1 class="mb-4" data-i18n="hotel.sResortElNido.name">S Resort El Nido</h1>
-                    <p class="lead mb-4" data-i18n="hotel.sResortElNido.description">A modern resort offering comfort and convenience for leisure and business travelers. Experience top-notch amenities and excellent service at S Resort El Nido.</p>
+                    <h1 class="mb-4" data-i18n="investing.restaurantsCafeBars.sunmaiNacpanBeach.name">Sunmai</h1>
+                    <p class="lead mb-4" data-i18n="investing.restaurantsCafeBars.sunmaiNacpanBeach.description">Sunmai Nacpan Beach is located in the center of Palawan's famous Nacpan Beach, one of the main restaurants on this beautiful beach. The restaurant offers delicious pizza, Korean cuisine, and Filipino dishes, highly recommended for both beach residents and day-trip visitors.</p>
                     <div class="hotel-info mb-4">
-                        <h5 data-i18n="hotel.info">Resort Info</h5>
-                        <p><strong data-i18n="hotel.rating">Rating:</strong> <span class="text-warning">★★★★★ 4.8</span></p>
-                        <p><strong data-i18n="hotel.location">Location:</strong> <span data-i18n="hotel.sResortElNido.location">Corong Corong, El Nido, Palawan</span></p>
-                        <p><strong data-i18n="hotel.phone">Phone:</strong> <span data-i18n="hotel.sResortElNido.phone">+63 917 678 9012</span></p>
-                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://www.sresortelnido.com" target="_blank">www.sresortelnido.com</a></p>
+                        <h5 data-i18n="hotel.info">Restaurant Info</h5>
+                        <p><strong data-i18n="hotel.location">Location:</strong> <span data-i18n="investing.restaurantsCafeBars.sunmaiNacpanBeach.location">Nacpan Beach</span></p>
+                        <p><strong>Seats:</strong> <span data-i18n="investing.restaurantsCafeBars.sunmaiNacpanBeach.seats">Seats: 120</span></p>
+                        <p><strong>Opening Year:</strong> <span data-i18n="investing.restaurantsCafeBars.sunmaiNacpanBeach.openingYear">Opening Year: 2017</span></p>
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div id="sResortElNidoCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div id="sunmaiCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="assets/img/sresort/sresort_1.jpg" class="d-block w-100" alt="S Resort El Nido">
+                                <img src="assets/img/snb/snb_1.jpg" class="d-block w-100" alt="Sunmai">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/sresort/sresort_2.jpg" class="d-block w-100" alt="S Resort El Nido">
+                                <img src="assets/img/snb/snb_2.jpg" class="d-block w-100" alt="Sunmai">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/sresort/sresort_3.jpg" class="d-block w-100" alt="S Resort El Nido">
+                                <img src="assets/img/snb/snb_3.jpg" class="d-block w-100" alt="Sunmai">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/sresort/sresort_4.jpg" class="d-block w-100" alt="S Resort El Nido">
+                                <img src="assets/img/snb/snb_4.jpg" class="d-block w-100" alt="Sunmai">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/sresort/sresort_5.jpg" class="d-block w-100" alt="S Resort El Nido">
+                                <img src="assets/img/snb/snb_5.jpg" class="d-block w-100" alt="Sunmai">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/sresort/sresort_6.jpg" class="d-block w-100" alt="S Resort El Nido">
+                                <img src="assets/img/snb/snb_6.jpg" class="d-block w-100" alt="Sunmai">
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#sResortElNidoCarousel" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#sunmaiCarousel" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden" data-i18n="common.previous">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#sResortElNidoCarousel" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#sunmaiCarousel" data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden" data-i18n="common.next">Next</span>
                         </button>
                     </div>
                     <div class="row mt-3">
-                        <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/sresort/sresort_1.jpg" class="img-fluid thumbnail" data-bs-target="#sResortElNidoCarousel" data-bs-slide-to="0">
+                        <div class="col-md-2 col-4 mb-2">
+                            <img src="assets/img/snb/snb_1.jpg" class="img-fluid thumbnail" data-bs-target="#sunmaiCarousel" data-bs-slide-to="0">
                         </div>
-                        <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/sresort/sresort_2.jpg" class="img-fluid thumbnail" data-bs-target="#sResortElNidoCarousel" data-bs-slide-to="1">
+                        <div class="col-md-2 col-4 mb-2">
+                            <img src="assets/img/snb/snb_2.jpg" class="img-fluid thumbnail" data-bs-target="#sunmaiCarousel" data-bs-slide-to="1">
                         </div>
-                        <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/sresort/sresort_3.jpg" class="img-fluid thumbnail" data-bs-target="#sResortElNidoCarousel" data-bs-slide-to="2">
+                        <div class="col-md-2 col-4 mb-2">
+                            <img src="assets/img/snb/snb_3.jpg" class="img-fluid thumbnail" data-bs-target="#sunmaiCarousel" data-bs-slide-to="2">
                         </div>
-                        <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/sresort/sresort_4.jpg" class="img-fluid thumbnail" data-bs-target="#sResortElNidoCarousel" data-bs-slide-to="3">
+                        <div class="col-md-2 col-4 mb-2">
+                            <img src="assets/img/snb/snb_4.jpg" class="img-fluid thumbnail" data-bs-target="#sunmaiCarousel" data-bs-slide-to="3">
                         </div>
-                        <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/sresort/sresort_5.jpg" class="img-fluid thumbnail" data-bs-target="#sResortElNidoCarousel" data-bs-slide-to="4">
+                        <div class="col-md-2 col-4 mb-2">
+                            <img src="assets/img/snb/snb_5.jpg" class="img-fluid thumbnail" data-bs-target="#sunmaiCarousel" data-bs-slide-to="4">
                         </div>
-                        <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/sresort/sresort_6.jpg" class="img-fluid thumbnail" data-bs-target="#sResortElNidoCarousel" data-bs-slide-to="5">
+                        <div class="col-md-2 col-4 mb-2">
+                            <img src="assets/img/snb/snb_6.jpg" class="img-fluid thumbnail" data-bs-target="#sunmaiCarousel" data-bs-slide-to="5">
                         </div>
                     </div>
                 </div>
