--- a/nacpan-beach-glamping.html
+++ b/nacpan-beach-glamping.html
@@ -153,7 +153,7 @@
                         <p><strong data-i18n="hotel.rating">Rating:</strong> <span class="text-warning">★★★★★ 4.8</span></p>
                         <p><strong data-i18n="hotel.location">Location:</strong> <span data-i18n="hotel.nacpanBeachGlamping.location">Nacpan Beach, El Nido, Palawan</span></p>
                         <p><strong data-i18n="hotel.phone">Phone:</strong> <span data-i18n="hotel.nacpanBeachGlamping.phone">+63 917 345 6789</span></p>
-                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://www.nacpanbeachglamping.com" target="_blank" data-i18n="hotel.nacpanBeachGlamping.website">www.nacpanbeachglamping.com</a></p>
+                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://www.nacpanbeachglamping.com" target="_blank">www.nacpanbeachglamping.com</a></p>
                     </div>
                 </div>
                 <div class="col-lg-6">
