--- a/nacpan-beach-resort.html
+++ b/nacpan-beach-resort.html
@@ -153,7 +153,7 @@
                         <p><strong data-i18n="hotel.rating">Rating:</strong> <span class="text-warning">★★★★★ 4.7</span></p>
                         <p><strong data-i18n="hotel.location">Location:</strong> <span data-i18n="hotel.nacpanBeachResort.location">Nacpan Beach, El Nido, Palawan</span></p>
                         <p><strong data-i18n="hotel.phone">Phone:</strong> <span data-i18n="hotel.nacpanBeachResort.phone">+63 917 234 5678</span></p>
-                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://www.nacpanbeachresort.com" target="_blank" data-i18n="hotel.nacpanBeachResort.website">www.nacpanbeachresort.com</a></p>
+                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://www.nacpanbeachresort.com" target="_blank">www.nacpanbeachresort.com</a></p>
                     </div>
                 </div>
                 <div class="col-lg-6">
