--- a/nacpan-sunset-market.html
+++ b/nacpan-sunset-market.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta property="og:title" content="Piece Lio - H Hospitality Group" />
+    <meta property="og:title" content="Nacpan Sunset Market - H Hospitality Group" />
     <meta property="og:description"
-        content="Experience luxury and tranquility at Piece Lio, a world-class beachfront resort in El Nido, Palawan." />
-    <meta property="og:url" content="https://hhospitality.group/piece-lio.html" />
+        content="Experience the vibrant night market culture at Nacpan Beach, inspired by Taiwan's famous night markets." />
+    <meta property="og:url" content="https://hhospitality.group/nacpan-sunset-market.html" />
     <meta property="og:site_name" content="H Hospitality Group" />
-    <meta property="og:image" content="https://hhospitality.group/assets/img/piece-lio-og-image.jpg" />
+    <meta property="og:image" content="https://hhospitality.group/images/sunset_market/1.webp" />
     <meta name="format-detection" content="telephone=no">
-    <title>Piece Lio - H Hospitality Group</title>
+    <title>Nacpan Sunset Market - H Hospitality Group</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon_io/favicon.ico" />
     <link rel="apple-touch-icon" href="assets/favicon_io/android-chrome-192x192.png" sizes="192x192">
     <link rel="icon" href="assets/favicon_io/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -33,7 +33,7 @@
         }
 
         .piece-lio-banner {
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("images/piecelio/cover.webp");
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("images/sunset_market/1.webp");
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: scroll;
@@ -129,11 +129,11 @@
     <!-- Banner Section -->
     <section class="banner-section">
         <div class="container-fluid p-0">
-            <div class="banner-image" style="background-image: url('assets/img/sresort/sresort_1.jpg'); height: 60vh; background-size: cover; background-position: center;">
+            <div class="banner-image" style="background-image: url('images/sunset_market/1.webp'); height: 60vh; background-size: cover; background-position: center;">
                 <div class="banner-overlay d-flex align-items-center justify-content-center" style="background-color: rgba(0, 0, 0, 0.4); height: 100%;">
                     <div class="text-center text-white">
-                        <h1 class="display-3 fw-bold" data-i18n="hotel.sResortElNido.name">S Resort El Nido</h1>
-                        <p class="lead" data-i18n="hotel.sResortElNido.location">Corong Corong, El Nido, Palawan</p>
+                        <h1 class="display-3 fw-bold" data-i18n="investing.travel.nacpanSunsetMarket.name">納克潘日落市集</h1>
+                        <p class="lead">體驗台式夜市文化</p>
                     </div>
                 </div>
             </div>
@@ -146,65 +146,54 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <h1 class="mb-4" data-i18n="hotel.sResortElNido.name">S Resort El Nido</h1>
-                    <p class="lead mb-4" data-i18n="hotel.sResortElNido.description">A modern resort offering comfort and convenience for leisure and business travelers. Experience top-notch amenities and excellent service at S Resort El Nido.</p>
+                    <h1 class="mb-4" data-i18n="investing.travel.nacpanSunsetMarket.name">納克潘日落市集</h1>
+                    <p class="lead mb-4" data-i18n="investing.travel.nacpanSunsetMarket.description">在 Nacpan Beach 欣賞夕陽美景的同時，還能享受 Nacpan Sunset Market 的樂趣。這個市場靈感來自台灣著名的夜市，讓遊客在浪漫的沙灘氛圍中體驗豐富多樣的美食與手工藝品</p>
                     <div class="hotel-info mb-4">
-                        <h5 data-i18n="hotel.info">Resort Info</h5>
-                        <p><strong data-i18n="hotel.rating">Rating:</strong> <span class="text-warning">★★★★★ 4.8</span></p>
-                        <p><strong data-i18n="hotel.location">Location:</strong> <span data-i18n="hotel.sResortElNido.location">Corong Corong, El Nido, Palawan</span></p>
-                        <p><strong data-i18n="hotel.phone">Phone:</strong> <span data-i18n="hotel.sResortElNido.phone">+63 917 678 9012</span></p>
-                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://www.sresortelnido.com" target="_blank">www.sresortelnido.com</a></p>
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div id="sResortElNidoCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div id="sunsetMarketCarousel" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="assets/img/sresort/sresort_1.jpg" class="d-block w-100" alt="S Resort El Nido">
+                                <img src="images/sunset_market/1.webp" class="d-block w-100" alt="Nacpan Sunset Market 1">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/sresort/sresort_2.jpg" class="d-block w-100" alt="S Resort El Nido">
+                                <img src="images/sunset_market/2.webp" class="d-block w-100" alt="Nacpan Sunset Market 2">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/sresort/sresort_3.jpg" class="d-block w-100" alt="S Resort El Nido">
+                                <img src="images/sunset_market/3.webp" class="d-block w-100" alt="Nacpan Sunset Market 3">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/sresort/sresort_4.jpg" class="d-block w-100" alt="S Resort El Nido">
+                                <img src="images/sunset_market/4.webp" class="d-block w-100" alt="Nacpan Sunset Market 4">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/sresort/sresort_5.jpg" class="d-block w-100" alt="S Resort El Nido">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="assets/img/sresort/sresort_6.jpg" class="d-block w-100" alt="S Resort El Nido">
+                                <img src="images/sunset_market/5.webp" class="d-block w-100" alt="Nacpan Sunset Market 5">
                             </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#sResortElNidoCarousel" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#sunsetMarketCarousel" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden" data-i18n="common.previous">Previous</span>
+                            <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#sResortElNidoCarousel" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#sunsetMarketCarousel" data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden" data-i18n="common.next">Next</span>
+                            <span class="visually-hidden">Next</span>
                         </button>
                     </div>
                     <div class="row mt-3">
                         <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/sresort/sresort_1.jpg" class="img-fluid thumbnail" data-bs-target="#sResortElNidoCarousel" data-bs-slide-to="0">
+                            <img src="images/sunset_market/1.webp" class="img-fluid thumbnail" data-bs-target="#sunsetMarketCarousel" data-bs-slide-to="0" style="height: 80px; object-fit: cover;">
                         </div>
                         <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/sresort/sresort_2.jpg" class="img-fluid thumbnail" data-bs-target="#sResortElNidoCarousel" data-bs-slide-to="1">
+                            <img src="images/sunset_market/2.webp" class="img-fluid thumbnail" data-bs-target="#sunsetMarketCarousel" data-bs-slide-to="1" style="height: 80px; object-fit: cover;">
                         </div>
                         <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/sresort/sresort_3.jpg" class="img-fluid thumbnail" data-bs-target="#sResortElNidoCarousel" data-bs-slide-to="2">
+                            <img src="images/sunset_market/3.webp" class="img-fluid thumbnail" data-bs-target="#sunsetMarketCarousel" data-bs-slide-to="2" style="height: 80px; object-fit: cover;">
                         </div>
                         <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/sresort/sresort_4.jpg" class="img-fluid thumbnail" data-bs-target="#sResortElNidoCarousel" data-bs-slide-to="3">
+                            <img src="images/sunset_market/4.webp" class="img-fluid thumbnail" data-bs-target="#sunsetMarketCarousel" data-bs-slide-to="3" style="height: 80px; object-fit: cover;">
                         </div>
                         <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/sresort/sresort_5.jpg" class="img-fluid thumbnail" data-bs-target="#sResortElNidoCarousel" data-bs-slide-to="4">
-                        </div>
-                        <div class="col-md-3 col-4 mb-2">
-                            <img src="assets/img/sresort/sresort_6.jpg" class="img-fluid thumbnail" data-bs-target="#sResortElNidoCarousel" data-bs-slide-to="5">
+                            <img src="images/sunset_market/5.webp" class="img-fluid thumbnail" data-bs-target="#sunsetMarketCarousel" data-bs-slide-to="4" style="height: 80px; object-fit: cover;">
                         </div>
                     </div>
                 </div>
