--- a/piece-lio.html
+++ b/piece-lio.html
@@ -153,7 +153,7 @@
                         <p><strong data-i18n="hotel.rating">Rating:</strong> <span class="text-warning">★★★★★ 4.9</span></p>
                         <p><strong data-i18n="hotel.location">Location:</strong> <span data-i18n="hotel.pieceLio.location">Lio Beach, El Nido, Palawan</span></p>
                         <p><strong data-i18n="hotel.phone">Phone:</strong> <span data-i18n="hotel.pieceLio.phone">+63 917 123 4567</span></p>
-                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://www.piecelio.com" target="_blank" data-i18n="hotel.pieceLio.website">www.piecelio.com</a></p>
+                        <p><strong data-i18n="hotel.website">Website:</strong> <a href="https://www.piecelio.com" target="_blank">www.piecelio.com</a></p>
                     </div>
                 </div>
                 <div class="col-lg-6">
